syntax = "proto3";
package cosmos.auth.v1beta1;

import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/auth/types";

// Params defines the parameters for the auth module
message Params {
  uint64 max_memo_characters = 1;
  uint64 tx_sig_limit = 2;
  uint64 tx_size_cost_per_byte = 3;
  uint64 sig_verify_cost_ed25519 = 4;
  uint64 sig_verify_cost_secp256k1 = 5;
}

// BaseAccount defines a base account type
message BaseAccount {
  string address = 1;
  google.protobuf.Any pub_key = 2;
  uint64 account_number = 3;
  uint64 sequence = 4;
}